Fix image animation, optimzed animation and viewing on mobile. Added more logos

--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,7 @@ margin-top: 5px;
 }
 
 .header .prev-wong.animate img {
-top: 2vh;
+top: 1vh;
 width: 60px;
 height: auto;
 left: 2vw;
@@ -128,8 +128,8 @@ opacity:0.4;
 .hero-section > section {
     float:left;
     width:100%;
-    top:50%;
-    position: absolute;;
+    top:65%;
+    position: absolute;
     left:0;
     transform:translateY(-50%);
 }
@@ -167,7 +167,7 @@ margin-top: 20px;
 .hero-section .event-buttons {
     margin: 0 auto;
     width: 60%;
-    margin-top: 40px;
+    margin-top: 50px;
     text-align: center;
 }
 
@@ -175,7 +175,12 @@ margin-top: 20px;
 font-size: 2.5em;
 color: #fff;
 left: 0;
-top: 0;
+opacity: 0;
+transition: opacity .5s ease-out;
+}
+
+.hero-section .event-date.show{
+    opacity: 1;
 }
 
 .event-buttons li {
@@ -247,26 +252,31 @@ font-size: 3em;
 
 .event-stats {
 margin-top: 50px;
-height: 70vh;
+height: 601px;
+
 box-shadow: 0px 0px 72px 5px rgba(0, 0, 0, 0.17);
 width: 100%;
 margin-bottom: 100px;
 }
 
 .photos-section {
-float: left;
-max-width: 60%;
+position: relative;
+width: 60%;
+height: 600px;
 display: inline-block;
 }
 
 .photos-section .link-section{
-    position: absolute;
-    display: block;
-    z-index: 20;
-    width: 60%;
-    height: 70vh;
+
+    position: relative;
+
+    width: 100%;
+    height: 100%;
+    float: left;
     transition: 0.5s ease-in-out;
+    z-index: 50;
 }
+
 
 .photos-section .link-section:hover{
     background: rgba(0,0,0,0.5);
@@ -296,13 +306,24 @@ display: inline-block;
 }
 
 .photos-section .images {
-    z-index: -2;
+    z-index: 5;
+    position: absolute;
+    height: 600px;
+    overflow: hidden;
+    width: auto;
 }
 
 .photos-section img {
-max-width: 100%;
-height: 70vh;
+width: 100%;
+height: auto;
 z-index: -2;
+opacity: 0;
+transition: opacity 1s ease-in-out;
+}
+
+.photos-section img.active{
+
+    opacity: 1;
 }
 
 
@@ -310,7 +331,8 @@ z-index: -2;
 width: 35%;
 float: right;
 margin-right: 3%;
-overflow: auto;
+height: 100%;
+overflow: hidden;
 }
 
 .event-stats .past-employers div {
@@ -341,14 +363,18 @@ margin: 30px 10%;
 
 .sponsors-section>div~div {
 margin-top: 20px;
+padding-bottom: 10px;
 }
 
 .sponsors-section,
+.employers-div,
 .supporting-div,
 .media-div {
-max-width: 60%;
+width: 60%;
 margin: auto;
 display: block;
+overflow: auto;
+
 }
 
 .employers-div h3,
@@ -359,20 +385,24 @@ font-size: 2.5em;
 color: #18469d;
 }
 
-.employers-div img {}
+.employers-div img {
+    float: left;
+}
 
 .employers-div div,
 .supporting-div div,
 .media-div div {
 text-align: center;
+
 }
 
 .employers-div img,
 .supporting-div img,
 .media-div img {
+
 width: 10vw;
-height: 10vw;
-margin: 40px;
+height: auto;
+margin: 15px;
 }
 /*CONTACT STYLES */
 
@@ -557,11 +587,12 @@ body {
 .event-stats {
     width: 100%;
     box-shadow: none;
+    height: 300px;
 }
 .photos-section {
     display: block;
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+    height: 300px;
 }
 .photos-section img {
     width: 100%;
@@ -569,9 +600,12 @@ body {
 }
 .event-stats .past-employers {
     margin: auto;
+    position: relative;
     display: block;
+    height: auto;
     width: 100%;
-    overflow: auto;
+    left: 20px;
+    
 }
 .event-stats .past-employers div {
     display: inline-block;
@@ -580,10 +614,16 @@ body {
     box-sizing: border-box;
     margin: 10px;
 }
-.sponsors-section,
+
+.sponsors-section{
+    width: 95%;
+    margin: auto;
+}
+.employers-div,
 .supporting-div,
 .media-div {
-    max-width: 90%;
+    width: 90%;
+    max-width: 100%;
     margin: auto;
     display: block;
 }
